# tc2025

./: .~lock.route.csv#  AGENTS.md  route.csv  静的コードレビュー報告書.md
docs/: ros1_waypoint_visualization_and_editing.md
ros1_src/config/: mcl_3dl.rviz  tc2024_mid.yaml
ros1_src/docs/: odom_velocity_integration.md
ros1_src/launch/: 1_init_robot_tc2024_joystick.launch  1_init_robot_tc2024_joystick_sim.launch  2-1_mapping_hdl_graph_slam.launch  3-1_locarization_fastlio.launch  3-1_locarization_fastlio_inagi.launch  3-1_locarization_gps.launch  test_usb_cam.launch
ros1_src/scripts/: amcl_pos_reader_lio.py  depth_image_visualizer.py  gps_localization.py  gps_pose_estimator.py  image_publisher_from_file.py  joystick_teleop.py  navigator.py  odom_velocity_integrator.py  rotation_matrix.npy  rotation_matrix.txt  waypoint(alllidar).csv  waypoint_map_view.py  waypoint_with_rotation.csv  waypoint_with_rotation_filtered.csv
ros1_src/scripts/map/: apply_rotation_to_pcd.py  calculate_rotation_matrix.py  merge_pcd_files.py  plot_node1_only.py  plot_waypoints.py  remove_consecutive_node1.py  waypoint_plot_stats.txt
ros2_src/: create_cmake_for_python_packages.sh  waypoint_editor_mock.md  定義名見直し方針.md
ros2_src/laser_scan_simulator/laser_scan_simulator/: laser_scan_simulator.py
ros2_src/obstacle_monitor/: CMakeLists.txt  README.md  package.xml  setup.py
ros2_src/obstacle_monitor/docs/: laser_scan_simulator_詳細設計書_phase2.md  obstacle_monitor_詳細設計書_phase2.md  追加実装検討報告書.md
ros2_src/obstacle_monitor/launch/: all.launch.py  laser_scan_simulator.launch.py  laser_scan_simulator_and_monitor.launch.py  obstacle_monitor.launch.py
ros2_src/obstacle_monitor/obstacle_monitor/: laser_scan_simulator_node.py  obstacle_monitor_node.py
ros2_src/obstacle_monitor/params/: default.yaml
ros2_src/robot_console/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
ros2_src/robot_console/docs/: dashboard_topic_mapping.csv  robot_console_phase1_検討記録.md  robot_console_詳細設計書.md  robot_console_開発指示書.md
ros2_src/robot_console/launch/: robot_console.launch.py
ros2_src/robot_console/robot_console/: __init__.py  gui_core.py  robot_console_node.py  ui_main.py
ros2_src/robot_console/robot_console/ui_components/: __init__.py
ros2_src/robot_console/robot_console/utils/: __init__.py  data_models.py  image_tools.py  time_utils.py
ros2_src/robot_console/tools/: mock_ui.py
ros2_src/robot_console/tools/tests/: test_gui_core.py  test_image_tools.py
ros2_src/robot_navigator/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
ros2_src/robot_navigator/docs/: robot_navigator_詳細設計書_phase2.md  robot_simulator_詳細設計書_phase2.md  実装分析報告書.md  追加実装検討報告書.md
ros2_src/robot_navigator/launch/: all.launch.py  robot_navigator.launch.py  robot_simulator.launch.py
ros2_src/robot_navigator/params/: default.yaml
ros2_src/robot_navigator/robot_navigator/: __init__.py  robot_navigator_node.py  robot_navigator_node_org.py  robot_simulator_node.py  robot_simulator_node_org.py
ros2_src/robot_simulator/: README.md
ros2_src/robot_simulator/robot_simulator/: robot_simulator.py
ros2_src/route_follower/: CMakeLists.txt  README.md  package.xml  setup.py
ros2_src/route_follower/docs/: route_follower_phase2_検討記録_完全版.md  route_follower_phase3_検討記録_完全版.md  route_follower_詳細設計書_phase1.md  route_follower_詳細設計書_phase2_完全版.md  route_follower_詳細設計書_phase3_完全版.md
ros2_src/route_follower/launch/: route_follower.launch.py
ros2_src/route_follower/params/: default.yaml
ros2_src/route_follower/route_follower/: follower_core.py  route_follower.py  route_follower_fsm.py  route_follower_node.py
ros2_src/route_follower/tests/: conftest.py  test_route_follower_baseline.py  test_route_follower_fsm.py
ros2_src/route_manager/: README.md  package.xml  setup.py
ros2_src/route_manager/docs/: route_manager_phase2_検討記録.md  route_manager_phase3_検討記録.md  route_manager_詳細設計書_phase2.md  route_manager_詳細設計書_phase3.md  route_manager詳細設計書_phase1.md
ros2_src/route_manager/launch/: route_manager.launch.py
ros2_src/route_manager/params/: default.yaml  inagi.yaml  tsukuba.yaml
ros2_src/route_manager/route_manager/: __init__.py  manager_core.py  manager_fsm.py  route_manager.py  route_manager_fsm.py  route_manager_node.py
ros2_src/route_manager/tests/: conftest.py  test_route_manager_baseline.py  test_route_manager_fsm.py
ros2_src/route_msgs/: CMakeLists.txt  README.md
ros2_src/route_msgs/docs/: follower_state_field_review.md
ros2_src/route_msgs/msg/: FollowerState.msg  ManagerStatus.msg  ObstacleAvoidanceHint.msg  Route.msg  RouteState.msg  Waypoint.msg
ros2_src/route_msgs/srv/: ReportStuck.srv  UpdateRoute.srv
ros2_src/route_planner/: README.md  package.xml  requirements.txt  setup.py
ros2_src/route_planner/docs/: Waypoint_editor_詳細設計書.md  route_planner_詳細設計書_phase1.md
ros2_src/route_planner/launch/: route_planner.launch.py
ros2_src/route_planner/params/: default.yaml  inagi.yaml  tsukuba.yaml
ros2_src/route_planner/route_planner/: __init__.py  graph_solver.py  latlon_to_pixel_mapper.py  route_builder.py  route_planner.py  route_planner_node.py
ros2_src/route_planner/tests/: test_route_builder_slice.py
ros2_src/route_planner/tools/: auto_correct_pgw.py  latlon_to_pixel_mapper.py  plot_edges_on_map.py  segment_waypoints.py  waypoint_editor.py
ros2_src/waypoint_editor/: CMakeLists.txt  package.xml  setup.py
ros2_src/waypoint_editor/launch/: waypoint_editor.launch.py
ros2_src/waypoint_editor/rviz/: waypoint_editor.rviz
ros2_src/waypoint_editor/srv/: RotateWaypoint.srv  SearchLabel.srv  SelectInRviz.srv  ShiftWaypoint.srv  UpdateFlags.srv  UpdateNode.srv  UpdatePose.srv
ros2_src/waypoint_editor/waypoint_editor/: csv_io.py  latlon_mapper.py  transform_estimator.py  waypoint_editor_gui.py  waypoint_editor_node.py
ros2_src/yolo_detector/: README.md  package.xml  setup.cfg  setup.py
ros2_src/yolo_detector/docs/: road_blockage_detector_launch_analysis.md  road_blockage_detector_詳細設計書.md  route_blockage_detector_launch_analysis.md  route_blockage_detector_詳細設計書.md
(+118 files in other folders)
