<?xml version="1.0"?>
<package format="3">
  <name>robot_console</name>
  <version>0.1.0</version>
  <description>運行監視と手動介入を提供する robot_console GUI ノード。</description>
  <maintainer email="maintainer@example.com">robot_console maintainers</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>python3-tk</exec_depend>
  <exec_depend>python3-pil</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>route_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
