<?xml version="1.0"?>
<package format="3">
  <name>robot_navigator</name>
  <version>0.1.0</version>
  <description>ROS2 package providing navigation control and simulation nodes.</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache License 2.0</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>route_msgs</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

